--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 
             <header class="center">
                 <div>
-                  <img src="C:\Users\Aluno_Tarde\Music\aaaaaaa\gege\WhatsApp Image 2024-06-17 at 19.45.31.jpeg" alt=" html5 icon" style=" width: 120px; height: 150px;">
+                  <img src="WhatsApp Image 2024-06-17 at 19.45.31.jpeg" alt=" html5 icon" style=" width: 120px; height: 150px;">
                 </div>
                 <h1>Entre em contato!</h1>
             </header>
